# bmssp

./: .gitignore  CMakeLists.txt  LICENSE  OUTPUT_FILE  README.md  a  batch-pq.hpp  bmssp-expected.hpp  bmssp-wc.hpp  bmssp.hpp  cp-lib  cses.cpp  dijkstra.hpp  download-graphs.bash  experiment.cpp  experiment_runner  generator.cpp  helpers.hpp  main.cpp  main2.cpp  results copy.txt  results.txt  run-experiments.bash  sand  sandbox.cpp  tmp.cpp  versoes.txt
.github/workflows/: ci.yaml
experiments/: CD_results_H3  CD_results_USA  Ex_results_D3  Ex_results_GridED  Ex_results_GridR  b  best_fit.ipynb  create_graphic.ipynb  download-graphs.bash  experiment-CD.cpp  experiment-expected.cpp  experiment.cpp  generate-all-grid-graphs.bash  generate-all-hamiltonian-random-graphs.bash  generate-all-random-graphs.bash  grid-generator.cpp  ploter.ipynb  ploter.py  ploter_CD.py  random-graph-generator.cpp  results.txt  resultsD3.txt  resultsUSA.txt  results_14102025.txt  results_15102025.txt  results_CD_H3  results_D3  results_D3.txt  results_GridED  results_GridR  results_H10  results_H5  results_USA  results_USA.txt  run-experiments-CD.bash  run-experiments-expected.bash  run-experiments.bash  usa_ploter.py
experiments/generators/: hamiltonian-random-graph-generator.cpp  random-graph-generator.cpp
helpers/: common.hpp  dijkstra.hpp  header_tester.cpp  readme.cpp
include/: bmssp-expected.hpp  bmssp-worst-case.hpp  bmssp.hpp
single_include/: bmssp.hpp
test/: in1  in2  in3  in4  in5  in6  in8
tests/: b  benchmarks.cpp  common.cpp  imports-tester-expected.cpp  imports-tester-wc.cpp  imports_tester.cpp  readme.cpp  tests-expected.cpp  tests-wc.cpp  tests.cpp
(+58 files in other folders)
